--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
-    <link rel="icon" type="image/png" href="/MO-favicon.png" />
+    <link rel="icon" type="image/png" href="/MO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Milena Oswald</title>
   </head>
