--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link
+      rel="preload"
+      href="/fonts/xillian.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
     <link rel="icon" type="image/png" href="/MO.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Milena Oswald</title>
