--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <link
       rel="preload"
-      href="/fonts/xillian.woff2"
+      href="/fonts/Xillian Regular.otf"
       as="font"
-      type="font/woff2"
       crossorigin="anonymous"
     />
     <link rel="icon" type="image/png" href="/MO.png" />
